made as per discussions in PR #12988